--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.2.0"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.2.0",
+    "mongoose-unique-validator": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1"
   }
 }
